--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-vehicle_signals = { git = "https://github.com/sabaton-rs/vehicle_signals.git"}
-cyclonedds-rs = { git = "https://github.com/sjames/cyclonedds-rs.git"}
-cyclonedds-sys = { git = "https://github.com/sjames/cyclonedds-sys.git"}
+vehicle-signals = "0.1.0"
+cyclonedds-rs = "0.3.0"
 rand = "0.8.4"
